feat: Fragment Top Headlines
Initial implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,10 +70,10 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.3'
     kapt 'com.jakewharton:butterknife-compiler:10.2.3'
 
-
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation "androidx.fragment:fragment-ktx:1.5.2"
 
     // Local unit tests
     testImplementation 'junit:junit:4.13.2'
