feat: View News Detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Daily"
         tools:targetApi="31">
+
+        <activity android:name=".ui.activities.news.NewsActivity"/>
+
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".ui.activities.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
