--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation "androidx.fragment:fragment-ktx:1.5.2"
 
+    // GSON
+    implementation 'com.google.code.gson:gson:2.9.1'
+
     // Local unit tests
     testImplementation 'junit:junit:4.13.2'
 
